# django-pokerfacowaty-com

./: .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: base.css  blog.css  blog_dark.css  post.css  post_dark.css
blog/templates/blog/: base.html  base_main.html  base_post.html
musicplanner/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
musicplanner/migrations/: 0001_initial.py  0002_musicentry_made.py
musicplanner/static/musicplanner/css/: mp.css  mp_dark.css
musicplanner/templates/musicplanner/: base.html  base_add_new.html  base_main.html
pages/: admin.py  models.py  mpt.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_pamlpage_game.py
pages/static/pages/css/: archive.css  archive_dark.css  base.css  cs.css  cs_dark.css  dating.css  dating_dark.css  events.css  events_dark.css  main.css  main_dark.css  mc.css  projects_dark.css  setup.css  setup_dark.css
pages/templates/pages/: base.html  base_archive.html  base_cwk.html  base_dating.html  base_main.html  base_paml.html  base_paml_mc.html
playlists/: models.py  urls.py  views.py
playlists/migrations/: 0001_initial.py  0002_playlist_description.py
playlists/static/playlists/css/: base.css  main.css  main_dark.css  playlist.css  playlist_dark.css
playlists/templates/playlists/: base.html  base_main.html  base_playlist.html
pokerfacowaty_com/: asgi.py  settings.py  urls.py  wsgi.py
