[tool.poetry]
name = "django-pokerfacowaty-com"
version = "0.1.0"
description = "The pokerfacowaty.com website"
authors = ["PokerFacowaty <pokerfacowaty.bn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_pokerfacowaty_com"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
paml2html = "^0.1.1"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
